--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,14 @@ name: Docker Image Auto Create
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+    paths:
+      - 'VERSION'
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+  workflow_dispatch: 
 
 jobs:
   build:
