--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,18 +33,14 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build Docker image (amd64)
+    - name: Build and push Docker image (amd64)
       uses: docker/build-push-action@v6
       with:
         context: .
-        load: true # 构建镜像并加载到本地
+        push: true
         tags: |
-          imashen/palworld-tgbot:amd64
+          imashen/palworld-tgbot:latest
         platforms: linux/amd64
-
-    - name: Push Docker image (amd64)
-      run: |
-        docker push imashen/palworld-tgbot:amd64
 
   build-and-push-arm64:
     runs-on: ubuntu-latest
@@ -67,33 +63,11 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build Docker image (arm64)
+    - name: Build and push Docker image (arm64)
       uses: docker/build-push-action@v6
       with:
         context: .
-        load: true # 构建镜像并加载到本地
+        push: true
         tags: |
-          imashen/palworld-tgbot:arm64
+          imashen/palworld-tgbot:latest
         platforms: linux/arm64
-
-    - name: Push Docker image (arm64)
-      run: |
-        docker push imashen/palworld-tgbot:arm64
-
-  create-manifest:
-    needs: [build-and-push-amd64, build-and-push-arm64]
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Login to DockerHub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Create and push multi-arch manifest
-      run: |
-        docker manifest create imashen/palworld-tgbot:latest \
-          imashen/palworld-tgbot:amd64 \
-          imashen/palworld-tgbot:arm64
-        docker manifest push --purge imashen/palworld-tgbot:latest
